# botflow

./: .gitignore  LICENSE  README.md  pyproject.toml
botflow/: __init__.py  i18n.py  logger.py  manager.py  pages.py  qss.py  resolver.py  runtime.py  types.py  widgets.py  workers.py
botflow/__pyinstaller/: hook-botflow.py
botflow/_pyinstaller_hooks/: hook_resource_files.py
botflow/resources/locales/en_US/: common.json  dialogs.json  loading.json  messages.json
botflow/resources/locales/pt_BR/: common.json  dialogs.json  initial_page.json  loading.json  messages.json
botflow/resources/styles/: file_widget.qss  initial_page.qss  loading_page.qss  text_widget.qss
src/: main.py
src/resources/locales/pt_BR/: common.json
tests/: i18n_test.py  qss_test.py  resolver_test.py  runtime_test.py  workers_test.py
