[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botflow-gui"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.9.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6", 
    "pytest==9.0.2",
    "pyinstaller==6.17.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["botflow*"]

[tool.setuptools.package-data]
botflow = ["**/*"]

[project.entry-points.pyinstaller40]
hook-dirs = "botflow:get_hook_dirs"